--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Japan -- Fiction'
 - !lcc 'PQ'
+- GITenberg
 title: Madame Chrysanthème
 url: http://www.gutenberg.org/ebooks/18358
